media_query.css
/* DESKTOP (Large screens) */
@media (min-width: 992px) {
    .collection-section {
        margin-top: 150px !important;
        padding-top: 100px;

        .custom-text {
            top: -130px;
        }

        .coffee-image {
            max-width: 255px;
        }
    }
}

/* TABLET (Medium screens) */
@media (min-width: 768px) and (max-width: 991px) {
    .collection-section {
        .custom-text {
            top: -115px;
        }

    }

    .hero-section {

        h1 {
            font-size: 48px;
            text-align: left;
        }
    }

    .why-choose-section {
        .container {
            margin-bottom: 250px;
            gap: 24px;

            .why-choose-content {

                h2 {
                    font-size: 25px;
                }

                p {
                    font-size: 12px;
                }

                .benefits-row {
                    flex-direction: column;
                    gap: 24px;
                }
            }



        }
    }

}

/* Mobile */
@media (max-width:768px) {
    .hero-section {
        padding: 50px 0;
    }

    .why-choose-section {
        .container {
            margin-bottom: 250px;
            gap: 24px;

            .why-choose-content {
                h2 {
                    font-size: 20px;


                }

                p {
                    font-size: 12px;

                }

                .benefits-row {
                    flex-direction: column;
                    gap: 24px;
                }
            }
        }
    }


}

